# zkvm-compare

./: .gitignore  Cargo.toml  README.md  run-all.sh  run-big-input-push.sh  run-big-input-vecless.sh  run-big-input.sh  run-fib.sh  run-sha2.sh  run-sort.sh
bench/: Cargo.toml
bench/src/: cli.rs  main.rs  metric.rs  r0.rs  sp1.rs
common/: Cargo.toml
common/src/: big_input.rs  big_input_push.rs  big_input_vecless.rs  fib.rs  hello_world.rs  lib.rs  sha2.rs  sort.rs
guest-r0/: Cargo.toml
guest-r0/guest-r0/: Cargo.toml
guest-r0/guest-r0/src/: main.rs
guest-sp1/: Cargo.toml
guest-sp1/elf/: riscv32im-succinct-zkvm-elf
guest-sp1/src/: main.rs
