[package]
name = "bench"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bincode = { version = "1.3" }
chrono = { version = "0.4" }
clap = { workspace = true }
common = { workspace = true }
csv = { version = "1.3" }
glob = { version = "0.3" }
guest-r0 = { workspace = true }
risc0-zkvm = { version = "1.0.0-rc.5" }
serde = { workspace = true }
serde_json = { version = "1.0" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1", rev = "v1.0.0-testnet" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
uuid = { version = "1.8", features = ["v4"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
