[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
risc0-zkvm = { version = "1.0.0-rc.5", default-features = false, optional = true }
serde = { workspace = true }
sha2_r0 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0", optional = true }
sha2_sp1 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", optional = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", optional = true }

[features]
default = []
guest = []
r0 = ["guest", "risc0-zkvm/std", "sha2_r0"]
sp1 = ["guest", "sp1-zkvm", "sha2_sp1"]
